--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 norecursedirs = env/*
-addopts = -vv -p no:cacheprovider
+addopts = -vv -p no:cacheprovider -p no:warnings
 testpaths = tests/
 python_files = test_*.py
 env = 
